--- a/testimonials.html
+++ b/testimonials.html
@@ -37,12 +37,12 @@
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
      	    <li>
-     	      <a class="prime" href="#one">Home</a>
+     	      <a class="prime" href="index.html #one">Home</a>
      	    </li>
      	    <li>
      	      <a class="prime" href="gallery.html">Gallery</a>
      	    <li>
-     	      <a class="prime" href="#about">About Me</a>
+     	      <a class="prime" href="index.html #about">About Me</a>
      	    </li>
      	    <li>
      	      <a class="prime" href="#testimonials">Testimonials</a>
@@ -50,7 +50,7 @@
      		</ul>
      		<ul class="nav navbar-nav navbar-right" class="prime">
      	    <li>
-     	      <a class="prime" href="#bottom">Contact</a>
+     	      <a class="prime" href="index.html #bottom">Contact</a>
      	    </li>
      	   </ul>
 		</div>
@@ -68,37 +68,7 @@
 		<h4 id="inner-quote" class="text-center"> "Once in awhile, right in the middle of an ordinary life, Love gives us a fairy tale" -Anonymous </h4>
 	  </div>
 	</div>
-	<section id="about">
-	  <div class="container">
-	  	<h3 id="subtitle" class="text-center"> About Me </h3>
-	    <img src="./assets/profile2.jpg" alt="Stacy">
-	  </div>
-	  <div>
-	    <br>
-	    <h3 id="about-name"> Stacy Mcquerrey</h3>
-	      <h4 id="about-blurb">Experienced Wedding and Fantasy Photographer <span><h6>Galion, Ohio</h6></span></h4>
-	      <hr class="abouthr">
-	  </div>
-	  <div id="information"> 
-	      <p class="aboutp">Hello, I'm Stacy!<br>I'm a photography enthusiast that resides in Galion, Ohio - near Mansfield. I photograph Weddings, engagements, portraits, and model all across Ohio.</p>
-	        <br>
-	    <h4 id="small-header">Experience:</h4> 
-	      <p class="aboutp"> Wedding Photography, Fairytale/Fantasy, Boudoir, Senior Portraits, Engagements, Maternity, Family Portraits and Animals. <!-- Every love story is beautiful. Creating each wedding set to tell the story of your love through photos, for generations to come, is one of the greatest joys of being a photographer. They are the fairytales - the happily ever afters, that exist outside of the books. --></p>
-	        <br>
-	    <h4 id="small-header">Passions:</h4> 
-	      <p class="aboutp">Many of my passions go hand and hand with my love of photography. In my spare time, I enjoy creating beautiful, flowing or flowered dresses from ones I picked from second hand shops. I often put together the setting placement as well. I enjoy looking through Pinterest in search of my next hair inspiration or some make-up ideas. I spend time on YouTube trying to perfect hair and make-up techniques for my next shoot.</p>
-	        <br>
-	    <h4 id="small-header">Overview:</h4>
-	      <p class="aboutp">I have pursued a career as an independent photographer for well over 10 years. During my photography journey, I have found that photographing people cannot be compared to any other type of photography. To capture the raw beauty behind the eyes in what I am after. I have always been fascinated with the models in advertisements contained within magazines such as 'Vogue' and how the image can pursuade people to buy the product.</p>
-	        <br>
-	        <br>
-	  </div>
-	</section>
-	<div class="quote">
-	  <div class="container-fluid">
-		<h4 id="inner-quote" class="text-center"> "A camera is a Save button for the mind's eye" -Roger Kingston </h4>
-	  </div>
-	</div>
+
 	<div id="testimonials">
 	  <div class="container-fluid">
 	  <h3 id="subtitle" class="text-center"> Testimonials </h3>    
@@ -139,13 +109,13 @@
      </div>
      <div class="clearfix visible-lg-block"></div>
 
-      <!-- <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+      <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
         <section id="outside" class="text-center">
             <img src="./assets/mandi2.jpg" class="test">
             <h3 class="test-name"> Mandi Doll</h3>
             <hr><br>
             <input type="checkbox" class="read-more-state" id="post-4" />
-            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine. <span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical.<span class="read-more-target"> Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
                <label for="post-4" class="read-more-trigger"></label>
         </section>
       </div> 
@@ -156,8 +126,8 @@
             <h3 class="test-name"> Tonya Kincaid </h3>
             <hr><br>
             <input type="checkbox" class="read-more-state" id="post-5" />
-            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.
-             <span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine." </span></p>
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical.<span class="read-more-target"> Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.
+             Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine." </span></p>
               <label for="post-5" class="read-more-trigger"></label>
         </section>
       </div>
@@ -167,7 +137,7 @@
             <h3 class="test-name"> Emily Grace </h3>
             <hr><br>
              <input type="checkbox" class="read-more-state" id="post-6" />
-            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.<span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. <span class="read-more-target">Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
             <label for="post-6" class="read-more-trigger"></label>
         </section>
      </div>
@@ -179,7 +149,7 @@
             <h3 class="test-name"> Luna Eclipse</h3>
             <hr><br>
             <input type="checkbox" class="read-more-state" id="post-7" />
-            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.<span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical.<span class="read-more-target"> Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
                <label for="post-7" class="read-more-trigger"></label>
         </section>
       </div> 
@@ -189,8 +159,8 @@
             <h3 class="test-name"> Ariana </h3>
             <hr><br>
             <input type="checkbox" class="read-more-state" id="post-8" />
-            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.
-             <span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine." </span></p>
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. <span class="read-more-target">Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.
+             Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine." </span></p>
               <label for="post-8" class="read-more-trigger"></label>
         </section>
       </div>
@@ -201,14 +171,14 @@
             <h3 class="test-name"> Lucy La-Croix </h3>
             <hr><br>
              <input type="checkbox" class="read-more-state" id="post-9" />
-            <p class="text-justify info read-more-wrap">"Cray lomo XOXO, kitsch chambray enamel pin try-hard iceland freegan mustache hot chicken. Next level slow-carb jean shorts +1 hell of hot chicken flannel, scenester vexillologist banh mi pickled direct trade. Mixtape venmo tattooed bitters intelligentsia. Edison bulb live-edge pitchfork, typewriter direct trade salvia +1 taiyaki before they sold out cliche pinterest food truck humblebrag organic meh. Narwhal tousled paleo waistcoat fingerstache farm-to-table taiyaki mixtape four loko woke portland.<span class="read-more-target">8-bit subway tile prism marfa. Ramps taiyaki cred pop-up, live-edge pickled franzen chartreuse farm-to-table biodiesel literally. Single-origin coffee woke locavore four loko keffiyeh cred. Single-origin coffee la croix lumbersexual street art next level copper mug echo park artisan microdosing."</span></p>
+            <p class="text-justify info read-more-wrap">"Cray lomo XOXO, kitsch chambray enamel pin try-hard iceland freegan mustache hot chicken. Next level slow-carb jean shorts +1 hell of hot chicken flannel, scenester vexillologist banh mi pickled direct trade. Mixtape venmo tattooed bitters intelligentsia. Edison bulb live-edge pitchfork, typewriter direct trade salvia +1 taiyaki <span class="read-more-target">before they sold out cliche pinterest food truck humblebrag organic meh. Narwhal tousled paleo waistcoat fingerstache farm-to-table taiyaki mixtape four loko woke portland.8-bit subway tile prism marfa. Ramps taiyaki cred pop-up, live-edge pickled franzen chartreuse farm-to-table biodiesel literally. Single-origin coffee woke locavore four loko keffiyeh cred. Single-origin coffee la croix lumbersexual street art next level copper mug echo park artisan microdosing."</span></p>
             <label for="post-9" class="read-more-trigger"></label>
         </section>
      </div>
-     <div class="clearfix visible-lg-block"></div> -->
+     <div class="clearfix visible-lg-block"></div>
 
 	  </section>
-    <a href="testimonials.html #testimonials"><button class="more">See More</button></a>
+    <a href="index.html"><button class="more">Back to Home</button></a>
 	</div>
 </div>
 	<div class="quote">
@@ -228,7 +198,7 @@
           </section>
        	  <section id="contact-info" class="col-sm-4">
             <span>Contact: </span><br>
-            <p>Stacy Mcquerrey: <a href="tel:419-612-5008"><span class="phone">(419) 612-2030</span></a></p>
+            <p>Stacy Mcquerrey: (419) 612-2030</p>
             <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McquerreyS@yahoo.com</a>
             <br>
            <hr class="visible-xs">
@@ -240,13 +210,3 @@
        	<div class="text-center">&copy; Copyright Mcquerrey Studios 2017</div>
       </div>
 	</footer>
-
-
-
-
-	    <script src="./js/jquery.min.js"></script>
-	    <script src="./js/bootstrap.min.js"></script>
-	    <script src="./js/jquery.easing.min.js"></script>
-	    <script src="./js/script.js"></script>
-  </body>
-</html>
